# Asset-term-generator

./: .gitignore  .pre-commit-config.yaml  Assets_term_generator.spec  LICENSE  README.md  README.pt-br.md  USER_MANUAL.md  USER_MANUAL.pt-br.md  api_call.py  app.py  assets_cache.sqlite  build.spec  config.py  dev-requirements.in  dev-requirements.txt  document_processor.py  main.py  pyi-rthook.py  pyproject.toml  requirements.in  requirements.txt  todo.txt
.github/workflows/: ci-pipeline.yml
Gerador_Termos_Final/docx-template/: TERMO DE RESPONSABILIDADES NOTEBOOKS.docx
Gerador_Termos_Final/output/: Termo - Diogo Velozo Xavier.docx  Termo - Leonardo Serra.docx  (+1 more)
Termos/: Termo - Diogo Velozo Xavier.docx  Termo - Leonardo Serra.docx
api/: __init__.py  accessories_client.py  base_api_client.py  components_client.py  hardware_client.py  snipeit_client.py  user_api_client.py
config/: .env.example  config.yaml  config.yml  config.yml.example  pyproject.toml
core/: config_handler.py  config_manager.py  document_processor.py  template_loader.py
docx-template/: TERMO DE RESPONSABILIDADES CELULARES.docx  TERMO DE RESPONSABILIDADES NOTEBOOKS.docx  TERMO DE RESPONSABILIDADES V2.04.04.2025-1752.docx
models/: __init__.py  accessory.py  asset.py  user.py
output/: Termo - Adriano Ouverney Machado.docx  Termo - Diogo Velozo Xavier.docx  Termo - Leonardo Serra.docx  Termo - Ricardo Ribeiro.docx
scripts/: prepare_dist.py
tests/: test_document_processor.py  test_snipeit_client.py
ui/: cli_main.py
util/: __init__.py  exceptions.py  logging_config.py
(+24 files in other folders)
