[project]
name = "assets_term_generator"
version = "1.0.0"
authors = [
    { name="Diogo Velozo Xavier", email="diogo.velozo@outlook.com" },
]
description = "Um gerador de termos de responsabilidade a partir do Snipe-IT."

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["__pycache__", "tests", "dist", ".venv", "*.egg-info"]  
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade
    "B",  # bugbear
]


[tool.ruff.lint.isort]
known-first-party = ["assets_term_generator"]

[tool.mypy]
python_version = 3.11
exclude = ["tests", "venv", "build", "dist"]
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
namespace_packages = false


[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]